--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "react-test-renderer": "^16.5.2"
   }
 }
