--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-  "name": "folder-structure",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.2.0",
-    "@material-ui/icons": "^3.0.1",
-    "axios": "^0.18.0",
-    "filesize": "^3.6.1",
-    "prop-types": "^15.6.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-scripts": "2.0.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "react-test-renderer": "^16.5.2"
-  }
+	"name": "folder-structure",
+	"version": "0.1.0",
+	"private": true,
+	"homepage": "http://tiddle.github.io/folder-structure",
+	"dependencies": {
+		"@material-ui/core": "^3.2.0",
+		"@material-ui/icons": "^3.0.1",
+		"axios": "^0.18.0",
+		"filesize": "^3.6.1",
+		"gh-pages": "^2.0.1",
+		"prop-types": "^15.6.2",
+		"react": "^16.5.2",
+		"react-dom": "^16.5.2",
+		"react-scripts": "2.0.4"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	],
+	"devDependencies": {
+		"enzyme": "^3.7.0",
+		"enzyme-adapter-react-16": "^1.6.0",
+		"react-test-renderer": "^16.5.2"
+	}
 }
